# iHelper

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/代码设计/: 项目结构.md
package/scripts/: postinstall.sh  setup_ds_store.scpt
src/: CMakeLists.txt  CMakePresets.json  main.cpp
src/CorePlatform/: CMakeLists.txt  LICENSE
src/CorePlatform/cmake/: CorePlatformConfig.cmake.in
src/CorePlatform/include/CorePlatform/: Export.h  FileSystem.h  GTestLog.h  HostOperations.h  JsonUtils.h  Logger.h  Network.h  Process.h  StringUtils.h  SystemInfo.h  Thread.h  TimeUtils.h
src/CorePlatform/include/CorePlatform/Windows/: Registry.h  UAC.h  WindowsUtils.h
src/CorePlatform/src/: JsonUtils.cpp  Logger.cpp  StringUtils.cpp  TimeUtils.cpp
src/CorePlatform/src/Linux/: FileSystemLinux.cpp  HostOperationsLinux.cpp  NetworkLinux.cpp  SystemInfoLinux.cpp
src/CorePlatform/src/MacOS/: FileSystemMac.cpp  HostOperationsMac.cpp  SystemInfoMac.cpp
src/CorePlatform/src/Windows/: FileSystemWin.cpp  HostOperationsWin.cpp  ProcessWin.cpp  Registry.cpp  SystemInfoWin.cpp  ThreadWin.cpp  UAC.cpp
src/CorePlatform/tests/: CMakeLists.txt  GTestLog.h  HostOperationsTests.cpp  JsonUtilsTest.cpp  LoggerTest.cpp  StringUtilsTest.cpp  TestUtils.h  TimeUtilsTest.cpp  test_main.cpp
src/app/iHelper/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/message_bus/: message_bus.h
src/core/module_manager/: module_manager.h
src/core/plugin_system/: CMakeLists.txt  README.md  main.cpp
src/core/plugin_system/include/: PluginInterface.h  PluginManager.h  PluginSystemAPI.h
src/core/plugin_system/plugins/ExamplePlugin/: CMakeLists.txt  ExamplePlugin.cpp
src/core/plugin_system/src/: PluginManager.cpp  PluginSystemAPI.cpp
src/include/ihelper/interfaces/: imessage_bus.h  imodule.h  iplatform_adapter.h
src/include/ihelper/utils/: logger.h
src/modules/info_collector/: CMakeLists.txt  info_collector.h
src/platform/: CMakeLists.txt  README.md  platform_factory.h
src/platform/cmake/: PlatformConfig.cmake
src/platform/include/CorePlatform/: Export.h.in  FileSystem.h  Network.h  Process.h  SystemInfo.h  Thread.h
src/platform/include/CorePlatform/Internal/: PlatformDetection.h
src/platform/include/CorePlatform/Windows/: Registry.h  WindowsUtils.h
src/platform/linux/: linux_adapter.h
src/platform/macos/: macos_adapter.h
src/platform/src/Linux/: NetworkLinux.cpp  ProcessLinux.cpp  ThreadLinux.cpp
src/platform/src/MacOS/: NetworkMac.cpp  ProcessMac.cpp  ThreadMac.cpp
src/platform/src/Windows/: FileSystemWin.cpp  NetworkWin.cpp  ProcessWin.cpp  Registry.cpp  SystemInfoWin.cpp  ThreadWin.cpp  WindowsUtils.cpp
src/platform/tests/: CMakeLists.txt  FileSystemTest.cpp  NetworkTest.cpp  ProcessTest.cpp  RegistryTest.cpp  SystemInfoTest.cpp  TestUtils.h  test_main.cpp
src/platform/windows/: windows_adapter.h
tests/: CMakeLists.txt
